[workspace]
resolver = "2"
members = [
    "crates/vikas-runtime",
    "crates/vikas-http",
    "crates/vikas-cli",
]

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
v8 = "0.79.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive", "color"] }
regex = "1.10"
lazy_static = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
