[package]
name = "vikas-cli"
version = "0.1.0"
edition = "2021"
description = "Vikas.js CLI"

[[bin]]
name = "vikas"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
vikas-runtime = { path = "../vikas-runtime" }
vikas-http = { path = "../vikas-http" }
